objects/MarketingPromotion__c.object
<CustomObject>
    <description>An object that models a marketing promotion to be offered to the member.</description>
    <fields>
        <fullName>ColorPicker__c</fullName>
        <label>Icon Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>red</fullName>
                </value>
                <value>
                    <fullName>green</fullName>
                </value>
                <value>
                    <fullName>blue</fullName>
                </value>
                <value>
                    <fullName>purple</fullName>
                </value>
                <value>
                    <fullName>darkBlue</fullName>
                    <isActive>false</isActive>
                    <label>darkBlue</label>
                </value>
                <value>
                    <fullName>darkGrey</fullName>
                    <isActive>false</isActive>
                    <label>darkGrey</label>
                </value>
                <value>
                    <fullName>yellow</fullName>
                    <isActive>false</isActive>
                    <label>yellow</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <description>The color of the icon for the marketing promotion.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>The end date for which the promotion is effective.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaximumCreditScore__c</fullName>
        <description>The maximum credit score a person can have to qualify for this product.</description>
        <inlineHelpText>The maximum credit score a person can have to qualify for this product.</inlineHelpText>
        <label>MaximumCreditScore</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinimumCreditScore__c</fullName>
        <description>The minimum credit score needed to qualify for this product.</description>
        <inlineHelpText>The minimum credit score needed to qualify for this product.</inlineHelpText>
        <label>MinimumCreditScore</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>The start date for which the promotion is effective.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Marketing Promotion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Marketing Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>